--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,31 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+### LaTeX ###
+
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
+*.fls
+*.fdb_latexmk
